# safe_numerics

./: .travis.yml  CMakeLists.txt  Cmakelists.txt  README.md  appveyor.yml  index.html
.github/workflows/: posix.yml
CMake/: CMakeLists.txt  CTestConfig.cmake
doc/boostbook/: HTML.manifest  accu.xml  acknowledgements.xml  automatic.xml  bibliography.xml  checked.xml  checked_result.xml  cpp.xml  db2fo.xsl  db2html.xsl  eliminate_runtime_penalty.xml  exception.xml  exception_policy.xml  exception_policy_concept.xml  exception_type.xml  faq.xml  ignore_exception.xml  integer_concept.xml  interval.xml  makeepub.sh  makehtml.sh  makepdf.sh  motor.xml  native.xml  no_exception_support.xml  notes.xml  numeric_concept.xml  pending.xml  promotion_policy_concept.xml  proposal.xml  rational.xml  safe.xml  safe_cast.xml  safe_compare.xml  safe_introduction.xml  safe_literal.xml  safe_numeric_concept.xml  safe_numerics.xml  safe_range.xml  safe_signed_range.xml  (+4 more)
doc/boostbook/accu/: accu.xml  db2fo.xsl  makehtml.sh  makepdf.sh
doc/html/: acknowledgements.html  automatic_policy.html  bibliography.html  change_log.html  checked_arithmetic.html  checked_integer_arithmetic.html  checked_result.html  composition_with_other_libraries.html  concepts.html  cpp_policy.html  eliminate_runtime_penalty.html  exception.html  exception_polcy.html  exception_policies.html  exception_policy.html  exception_safety.html  exception_type.html  functions.html  index.html  integer.html  integer_concept.html  interval.html  interval_arithmetic.html  introduction.html  library_implementation.html  native_policy.html  notes.html  numeric.html  numeric_concept.html  pending_issues.html  performance_tests.html  promotion_policies.html  promotion_policy.html  rationale.html  references.html  safe.html  safe_cast.html  safe_compare.html  safe_literal.html  safe_numeric_concept.html  (+6 more)
doc/html/eliminate_runtime_penalty/: 1.html  2.html  3.html
doc/html/exception_policies/: ignore.html  no_exception_support.html  throw_exception.html  trap_exception.html
doc/html/introduction/: problem.html  requirements.html  scope.html  solution.html  summary.html
doc/html/promotion_policies/: automatic.html  cpp.html  native.html
doc/html/rationale/: overflow.html
doc/html/tutorial/: 1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  (+1 more)
example/: 18F252.h  18F252_desktop.h  18F252_original.h  CMakeLists.txt  Jamfile.v2  example1.cpp  example10.cpp  example11.cpp  example13.cpp  example14.cpp  example15.cpp  example16.cpp  example17.cpp  example18.cpp  example19.cpp  example2.cpp  example20.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example81.cpp  example82.cpp  example83.cpp  example84.cpp  example91.cpp  example92.cpp  example93.cpp  example94.cpp  example95.cpp  links.html  motor.h  motor1.c  motor2.c  motor3.c  motor_test2.c  motor_test3.c  safe_format.hpp
examples/: 18F252.h  18F252_desktop.h  CMakeLists.txt  Motor.c  Motor1.c  example1.cpp  example10.cpp  example11.cpp  example13.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example81.cpp  example82.cpp  example83.cpp  example84.cpp  example9.cpp  example91.cpp  example92.cpp  example93.cpp  motor.h  motor2.c  motor3.c  safe_format.hpp
include/: CMakeLists.txt  automatic.hpp  checked.hpp  checked_default.hpp  checked_float.hpp  checked_integer.hpp  checked_result.hpp  checked_result_operations.hpp  cpp.hpp  exception.hpp  exception_operations.hpp  exception_policies.hpp  interval.hpp  io.hpp  limits.hpp  native.hpp  numeric.hpp  overflow.hpp  policies.hpp  safe_base.hpp  safe_base_operations.hpp  safe_cast.hpp  safe_common.hpp  safe_compare.hpp  safe_integer.hpp  safe_integer_literal.hpp  safe_integer_range.hpp  safe_literal.hpp  safe_range.hpp  static_if.hpp  utility.hpp
include/boost/safe_numerics/: automatic.hpp  checked_default.hpp  checked_float.hpp  checked_integer.hpp  checked_result.hpp  checked_result_operations.hpp  cpp.hpp  exception.hpp  exception_policies.hpp  interval.hpp  native.hpp  range_value.hpp  safe_base.hpp  safe_base_operations.hpp  safe_common.hpp  safe_compare.hpp  safe_integer.hpp  safe_integer_literal.hpp  safe_integer_range.hpp  utility.hpp
include/boost/safe_numerics/concept/: exception_policy.hpp  integer.hpp  numeric.hpp  promotion_policy.hpp  safe_numeric.hpp
include/concept/: CMakeLists.txt  exception_policy.hpp  numeric.hpp  promotion_policy.hpp  safe_numeric.hpp
safe_numerics/examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example_test.cpp
safe_numerics/include/: safe_range.hpp
safe_numerics/test/: test_add.cpp  test_divide2.cpp  test_multiply3.cpp
safe_numerics/tests/: test.cpp  test.hpp  test_add1.cpp  test_add3.cpp  test_conversion.cpp  test_divide.hpp  test_divide1.cpp  test_divide3.cpp  test_misc.cpp  test_modulus.cpp  test_modulus.hpp  test_modulus1.cpp  test_modulus2.cpp  test_multiply.cpp  test_multiply.hpp  test_multiply1.cpp  test_multiply2.cpp  test_subtract.cpp  test_subtract.hpp  test_subtract2.cpp  test_subtract3.cpp
test/: CMakeLists.txt  Jamfile.v2  check_symmetry.hpp  library_status.html  links.html  test.cpp  test.hpp  test0.cpp  test_add.cpp  test_add.hpp  test_add2.cpp  test_add3.cpp  test_add_auto.cpp  test_add_automatic.cpp  test_add_native.cpp  test_and.hpp  test_and_automatic.cpp  test_and_native.cpp  test_assignment.cpp  test_assignment.hpp  test_auto.cpp  test_automatic.cpp  test_cast copy.cpp  test_cast.cpp  test_checked.cpp  test_checked_add.cpp  test_checked_add_constexpr.cpp  test_checked_add_native.cpp  test_checked_and.cpp  test_checked_and_constexpr.cpp  test_checked_cast.cpp  test_checked_cast.hpp  test_checked_divide.cpp  test_checked_divide.hpp  test_checked_divide_automatic.cpp  test_checked_divide_constexpr.cpp  test_checked_divide_native.cpp  test_checked_equal_to_constexpr.cpp  test_checked_left_shift copy.cpp  test_checked_left_shift.cpp  (+77 more)
test/vcide/: test_add.vcproj  test_comparison.vcproj  test_divide.vcproj  test_multiply.vcproj
(+36 files in other folders)
